stroop-macros/tests/compile_fails/missing_offset.rs
use stroop_macros::pattern;

fn main() {
    pattern!();
}
