stroop-macros/tests/compile_fails/missing_offset.stderr
error: expected offset as isize
 --> tests/compile_fails/missing_offset.rs:4:5
  |
4 |     pattern!();
  |     ^^^^^^^^^^
  |
  = note: this error originates in the macro `pattern` (in Nightly builds, run with -Z macro-backtrace for more info)
